<resources>
    <string name="app_name">Location Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_map">Map</string>
    <string name="tab_title_journey_list">Journey list</string>
    <string name="map_marker_last_known_location">Last known location</string>
    <string name="popup_location_tracking_started">Location tracking started</string>
    <string name="popup_location_tracking_stopped">Location tracking stopped</string>
    <string name="popup_journey_started">Journey started</string>
    <string name="popup_journey_ended">Journey ended</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="average_speed">Average speed:</string>
    <string name="journey_details_end_position">End position</string>
    <string name="journey_details_start_position">Start position</string>
    <string name="duration">Duration:</string>
    <string name="distance_traveled">Distance traveled:</string>
    <string name="duration_meters">%.2f meters</string>
    <string name="hours">%d hours</string>
    <string name="minutes">%d minutes</string>
    <string name="seconds">%d seconds</string>
    <string name="speed_km_h">%.2f km/h</string>
    <string name="activity_journey_details">Journey details</string>
</resources>
