<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/journey_details_start_time_description"
        android:text="@string/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/journey_details_end_time_description"
        android:text="@string/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/journey_details_start_time"/>

    <TextView
        android:id="@+id/journey_details_duration_description"
        android:text="@string/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/journey_details_end_time_description"/>

    <TextView
        android:id="@+id/journey_details_distance_traveled_description"
        android:text="@string/distance_traveled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/journey_details_duration_description"/>

    <TextView
        android:id="@+id/journey_details_average_speed_description"
        android:text="@string/average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/journey_details_distance_traveled_description"/>

    <android.support.constraint.Barrier
        android:id="@+id/journey_details_descriptions_end_barrier"
        app:constraint_referenced_ids="journey_details_start_time_description,journey_details_end_time_description,journey_details_duration_description,journey_details_distance_traveled_description,journey_details_average_speed_description"
        app:barrierDirection="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/journey_details_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/journey_details_descriptions_end_barrier"
        app:layout_constraintBaseline_toBaselineOf="@id/journey_details_start_time_description"/>

    <TextView
        android:id="@+id/journey_details_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/journey_details_descriptions_end_barrier"
        app:layout_constraintBaseline_toBaselineOf="@id/journey_details_end_time_description"/>

    <TextView
        android:id="@+id/journey_details_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/journey_details_descriptions_end_barrier"
        app:layout_constraintBaseline_toBaselineOf="@id/journey_details_duration_description"/>

    <TextView
        android:id="@+id/journey_details_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/journey_details_descriptions_end_barrier"
        app:layout_constraintBaseline_toBaselineOf="@id/journey_details_distance_traveled_description"/>

    <TextView
        android:id="@+id/journey_details_average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/journey_details_descriptions_end_barrier"
        app:layout_constraintBaseline_toBaselineOf="@id/journey_details_average_speed_description"/>


    <com.google.android.gms.maps.MapView
        android:id="@+id/journey_details_map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/journey_details_average_speed_description"
        app:layout_constraintBottom_toBottomOf="parent" />



</android.support.constraint.ConstraintLayout>